syntax = "proto3";

package io.products.productAttributeValue.api;

option java_outer_classname = "ProductAttributeValueApi";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "kalix/annotations.proto";
import "io/products/productAttributeValue/domain/product_attribute_value_domain.proto";

service ProductAttributeValueService {
    option (kalix.codegen) = {
      value_entity: {
        name: "io.products.productAttributeValue.domain.ProductAttributeValue"
        entity_type: "product_attribute_values"
        state: "io.products.productAttributeValue.domain.ProductAttributeValueState"
      }
    };
  
    rpc CreateProductAttributeValue(ProductAttributeValue) returns (google.protobuf.Empty){
      option (google.api.http) = {
        post: "/create_product_attribute_value"
        body: "*"
    };
    };
    
    rpc GetProductAttributeValue(GetProductAttributeValueRequest) returns (ProductAttributeValue);

    rpc UpdateProductAttributeValue(ProductAttributeValue) returns (google.protobuf.Empty);

    rpc DeleteProductAttributeValue(DeleteProductAttributeValueRequest) returns (google.protobuf.Empty);

}

message ProductAttributeValue {
    string value_id = 1  [(kalix.field).entity_key = true];
    string attribute_id = 2;
    string value = 3;
}

message GetProductAttributeValueRequest {
    string value_id = 1 [(kalix.field).entity_key = true];
}
message DeleteProductAttributeValueRequest {
    string value_id = 1 [(kalix.field).entity_key = true];
}
